--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.madlevel5task2">
+    package="com.example.MadLevel5Task2">
 
     <application
         android:allowBackup="true"
@@ -9,12 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MadLevel5task2"
+        android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
         <activity
-            android:name=".UI.MainActivity"
+            android:name="com.example.madlevel5task2.UI.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MadLevel5task2.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
